updated deprecated newInstance calls (#1950)
Co-authored-by: tom <tomnelson@users.noreply.github.com>
Co-authored-by: Keith Ratcliffe <ratcliffe.keith@gmail.com>
Co-authored-by: hgklohr <hgklohr@gmail.com>